Fix _config.yml formatting

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
-title: [Front-end Meetup Skopje (FEMUSK)]
-description: [Official website of the Front-end Meetup Skopje event]
-logo: [front-end-meetup-skopje-femusk-logo.png]
+title: Front-end Meetup Skopje (FEMUSK)
+description: Official website of the Front-end Meetup Skopje event
+logo: front-end-meetup-skopje-femusk-logo.png
